Class renamed and improved analysis